--- a/src/app/book-detail/book-detail.component.html
+++ b/src/app/book-detail/book-detail.component.html
@@ -4,7 +4,7 @@
     <dt>ISBN</dt>
     <dd>{{ book.isbn }}</dd>
     <dt>Author</dt>
-    <dd>{{ book.author }}</dd>
+    <dd>{{ book.author.nombre }}</dd>
     <dt>Publisher</dt>
     <dd>{{ book.publisher }}</dd>
     <dt>Price</dt>
