--- a/src/app/book/book.component.html
+++ b/src/app/book/book.component.html
@@ -23,7 +23,7 @@
   </table>
 
   <h1>Autor Catalogue
-    <a [routerLink]="['/autor-create']" class="btn btn-default btn-lg">
+    <a [routerLink]="['/author-create']" class="btn btn-default btn-lg">
       <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
     </a>
   </h1>
