--- a/src/app/book-detail/book-detail.component.html
+++ b/src/app/book-detail/book-detail.component.html
@@ -1,13 +1,13 @@
 <div class="container">
   <h1>{{ book.title }}</h1>
   <dl class="list">
-    <dt>ISBN</dt>
+    <dt>Titulación</dt>
     <dd>{{ book.isbn }}</dd>
-    <dt>Author</dt>
+    <dt>Asignatura</dt>
     <dd>{{ book.author.nombre }}</dd>
-    <dt>Publisher</dt>
+    <dt>Cuatrimestre</dt>
     <dd>{{ book.publisher }}</dd>
-    <dt>Price</dt>
+    <dt>Curso</dt>
     <dd>{{ book.price }}</dd>
     <dt>Update Date</dt>
     <dd>{{ book.updated_at }}</dd>
