--- a/src/app/autor-edit/autor-edit.component.html
+++ b/src/app/autor-edit/autor-edit.component.html
@@ -7,7 +7,7 @@
           <label for="name">Nombre</label>
           <input type="text" class="form-control" [(ngModel)]="autor.nombre" name="nombre" required>
         </div>
-        <div class="form-group">nacionalidadnacionalidad
+        <div class="form-group">
           <label for="name">Biografia</label>
           <input type="text" class="form-control" [(ngModel)]="autor.biografia" name="biografia" required>
         </div>
