--- a/src/app/autor/autor.component.html
+++ b/src/app/autor/autor.component.html
@@ -1,3 +1,23 @@
-<p>
-  autor works!
-</p>
+<div class="container">
+<h1>Autor Catalogue
+  <a [routerLink]="['/author-create']" class="btn btn-default btn-lg">
+    <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+  </a>
+</h1>
+<table class="table">
+  <thead>
+  <tr>
+    <th>Nombre</th>
+    <th>Action</th>
+  </tr>
+  </thead>
+  <tbody>
+  <tr *ngFor="let a of autor">
+    <td>{{ a.nombre }}</td>
+
+  <td>  <a [routerLink]="['/book-details', book._id]" class="btn btn-info btn-md">Details
+     </a></td>
+  </tr>
+  </tbody>
+</table>
+</div>
