--- a/src/app/book-edit/book-edit.component.html
+++ b/src/app/book-edit/book-edit.component.html
@@ -1,26 +1,26 @@
 <div class="container">
-  <h1>Edit Book</h1>
+  <h1>Edit estudiante</h1>
   <div class="row">
     <div class="col-md-6">
       <form (ngSubmit)="updateBook(book._id)" #bookForm="ngForm">
         <div class="form-group">
-          <label for="name">ISBN</label>
+          <label for="name">Titulación</label>
           <input type="text" class="form-control" [(ngModel)]="book.isbn" name="isbn" required>
         </div>
         <div class="form-group">
-          <label for="name">Title</label>
+          <label for="name">Nombre</label>
           <input type="text" class="form-control" [(ngModel)]="book.title" name="title" required>
         </div>
         <div class="form-group">
-          <label for="name">Author</label>
+          <label for="name">Asignatura</label>
           <input type="text" class="form-control" [(ngModel)]="book.author" name="author" required>
         </div>
         <div class="form-group">
-          <label for="name">Publisher</label>
+          <label for="name">Cuatrimestre</label>
           <input type="text" class="form-control" [(ngModel)]="book.publisher" name="publisher" required>
         </div>
         <div class="form-group">
-          <label for="name">Price</label>
+          <label for="name">Curso</label>
           <input type="number" class="form-control" [(ngModel)]="book.price" name="price" required>
         </div>
         <div class="form-group">
