--- a/src/app/book/book.component.html
+++ b/src/app/book/book.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1>Book Catalogue
+  <h1>Lista estudiantes
     <a [routerLink]="['/book-create']" class="btn btn-default btn-lg">
       <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
     </a>
@@ -7,8 +7,8 @@
   <table class="table">
     <thead>
     <tr>
-      <th>Title</th>
-      <th>Author</th>
+      <th>Nombre</th>
+      <th>Asignatura</th>
       <th>Action</th>
     </tr>
     </thead>
@@ -22,7 +22,7 @@
     </tbody>
   </table>
 
-  <h1>Autor Catalogue
+  <h1>Lista asignaturas
     <a [routerLink]="['/author-create']" class="btn btn-default btn-lg">
       <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
     </a>
@@ -33,11 +33,11 @@
     <th>Nombre</th>
     <th>Action</th>
   </tr>
-  <tr *ngFor="let book of books">
+  <tr *ngFor="let autor of autor">
     <td>{{ autor.nombre }}</td>
-    <!--
-  <td>  <a [routerLink]="['/book-details', book._id]" class="btn btn-info btn-md">Details
-     </a></td> -->
+
+  <td>  <a [routerLink]="['/autor-details', autor._id]" class="btn btn-info btn-md">Details
+     </a></td>
    </tr>
    </thead>
   </table>
